test/files/neg/macro-bundle-nonmacro.check
macro-bundle-nonmacro.scala:8: error: not found: value Bundle
  def foo = Bundle.impl
            ^
one error found
